--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.SplashScreenActivity"
             android:theme="@style/AppTheme.NoActionBar"> <!--android:label="@string/app_name"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +19,11 @@
         </activity>
 
         <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"> <!--android:label="@string/app_name"-->
+        </activity>
+        <activity
             android:name=".view.TesteActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
