--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ dependencies {
     compile('com.mikepenz.materialdrawer:library:2.8.2@aar') {
         transitive = true
     }
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.0.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:cardview-v7:24.0.+'
 }
