--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:theme="@style/AppTheme.NoActionBar"> <!--android:label="@string/app_name"-->
         </activity>
         <activity
-            android:name=".view.TesteActivity"
+            android:name=".view.DesenvolvimentoActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
