--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.edu.ifsc.ajinhocompatas">
+    package="br.com.edu.ifsc.anjinhocompatas">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.SplashScreenActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.view.SplashScreenActivity"
             android:theme="@style/AppTheme.NoActionBar"> <!-- android:label="@string/app_name" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,20 +23,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"> <!-- android:label="@string/app_name" -->
         </activity>
         <activity
-            android:name=".view.DesenvolvimentoActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.view.DesenvolvimentoActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".view.LoginActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.view.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
-            android:name=".view.AnimalDetalhesActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.view.AnimalDetalhesActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
