--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="br.com.edu.ifsc.anjinhocompatas">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.SplashScreenActivity"
-            android:theme="@style/AppTheme.NoActionBar"> <!-- android:label="@string/app_name" -->
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"> <!-- android:label="@string/app_name" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,25 +23,30 @@
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"> <!-- android:label="@string/app_name" -->
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"> <!-- android:label="@string/app_name" -->
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.DesenvolvimentoActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.AnimalDetalhesActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.CadastroUsuarioActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
