--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,31 +21,36 @@
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"> <!-- android:label="@string/app_name" -->
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.DesenvolvimentoActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.AnimalDetalhesActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.telas.CadastroUsuarioActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
             android:name="br.com.edu.ifsc.anjinhocompatas.CadastroAnimalActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
