--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:cardview-v7:24.0.+'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.github.clans:fab:1.6.4'
+
 }
