--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         </activity>
 
         <activity
-            android:name="br.com.edu.ifsc.anjinhocompatas.CadastroAnimalActivity"
+            android:name="br.com.edu.ifsc.anjinhocompatas.telas.CadastroAnimalActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
